--- a/ansible/roles/mail/handlers/main.yml
+++ b/ansible/roles/mail/handlers/main.yml
@@ -11,14 +11,6 @@
   systemd:
     name: postfix
     state: restarted
-- name: 'systemd restart postgrey'
-  systemd:
-    name: postgrey
-    state: restarted
-- name: 'systemd restart mailman'
-  systemd:
-    name: mailman
-    state: restarted
 - name: 'systemd restart mailman3'
   systemd:
     name: mailman3
@@ -27,10 +19,6 @@
   systemd:
     name: mailman3-web
     state: restarted
-- name: 'systemd restart amavis'
-  systemd:
-    name: amavis
-    state: restarted
 - name: 'systemd restart amavisd-milter'
   systemd:
     name: amavisd-milter
@@ -38,4 +26,8 @@
 - name: 'systemd restart opendkim'
   systemd:
     name: opendkim
+    state: restarted
+- name: systemctl restart rspamd
+  systemd:
+    name: rspamd
     state: restarted
