--- a/ansible/openrailwaymap/security.yml
+++ b/ansible/openrailwaymap/security.yml
@@ -49,19 +49,19 @@
       to_port: '{{ item.to_port }}'
       proto: tcp
     notify: ufw reload
-    loop:
-      - from_ip: 213.121.90.57
-        to_port: 80
-        comment: "SynxHealthTest, one test request per second, most frequent source IP"
-      - from_ip: 213.121.90.57
-        to_port: 443
-        comment: "SynxHealthTest, one test request per second, most frequent source IP"
-      - from_ip: 87.234.54.154
-        to_port: 80
-        comment: "SynxHealthTest, one test request per second, most frequent source IP"
-      - from_ip: 87.234.54.154
-        to_port: 443
-        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+    loop: []
+#      - from_ip: 213.121.90.57
+#        to_port: 80
+#        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+#      - from_ip: 213.121.90.57
+#        to_port: 443
+#        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+#      - from_ip: 87.234.54.154
+#        to_port: 80
+#        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+#      - from_ip: 87.234.54.154
+#        to_port: 443
+#        comment: "SynxHealthTest, one test request per second, most frequent source IP"
 
   - name: 'ufw: default deny'
     ufw:
