--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -191,15 +191,13 @@ apache:
         RewriteCond "%{HTTP_USER_AGENT}" "Gecko/[0-9]+ Firefox/[0-9.]+$"
         RewriteCond "%{HTTP_REFERER}" "^$"
         # Exclude requests not for tiles. Otherwise /index.html and its assets are forbidden as well.
-        RewriteCond "%{PATH_INFO}" "\.png$"
-        RewriteRule "." "-" [F]
+        RewriteRule "\.png$" "-" [F,L]
 
         # User-agent of a desktop browser and no referer requesting tiles
-        RewriteCond "%{HTTP_USER_AGENT}" "(^Mozilla/5.0 (Windows NT 10.0; Win64; x64) | Safari/[0-9]+.[0-9]+$| AppleWebKit/[0-9.]+ (KHTML, like Gecko) Mobile/[0-9E]+$)"
+        RewriteCond "%{HTTP_USER_AGENT}" "(^Mozilla/5\.0 (Windows NT 10\.0; Win64; x64) | Safari/[0-9]+\.[0-9]+$| AppleWebKit/[0-9.]+ (KHTML, like Gecko) Mobile/[0-9E]+$)"
         RewriteCond "%{HTTP_REFERER}" "^$"
         # Exclude requests not for tiles. Otherwise /index.html and its assets are forbidden as well.
-        RewriteCond "%{PATH_INFO}" "\.png$"
-        RewriteRule "." "-" [F]
+        RewriteRule "\.png$" "-" [F,L]
 
         # generic referer, likely not public accessible
         RewriteCond "%{HTTP_REFERER}" "\[0-9]\.amazonaws\.com/"
